# znamutils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  ReadMe.md  pyproject.toml  setup.py
tests/: test_decorators.py  test_slurm_helpers.py
tests/test-results/: pytest_in_tests.xml
znamutils/: __init__.py  decorators.py  slurm_helper.py
